edit books autor name

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                         <h4 class="work_place_1">Other sources</h4>
                         <div class="education-description">Youtube channels: Alishev, Гоша Дударь, Уроки Java</div>
-                        <div class="education-description">Books: Java: A Beginner's Guide</div>
+                        <div class="education-description">Books: Herbert Schildt "Java: A Beginner's Guide"</div>
                         <div class="education-description">Udemy: Spring & Hibernate for Beginners (includes Spring Boot)</div>
 
                     </div>
