change skills description and add skype

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <div>
                     <span class="contacts-link-type" >E:</span> <a class="contacts-link" href="mailto:prosperro.de@gmail.com">prosperro.de@gmail.com</a> 
                 </div>
+
+                <div>
+                    <span class="contacts-link-type" >S:</span> <a class="contacts-link" href="skype:tikki1991">Skype: tikki1991</a> 
+                </div>
         </div> 
         <!--Location -->
         <div>
@@ -41,7 +45,7 @@
 
         <!--Tech skills container -->
         <div>
-            <h3 class="tech-skills">Tech Skills</h3>
+            <h3 class="tech-skills">Skills</h3>
 
             <ul class="list-sb">
                 <li> 
@@ -54,22 +58,28 @@
                     <span class="list-sb-text"> JDBC </span>
                 </li>  
                 <li>
-                    <span class="list-sb-text">  Hibernate(Beginner) </span>
+                    <span class="list-sb-text">  Hibernate </span>
                 </li>
                 <li>
-                    <span class="list-sb-text"> Spring Boot(Beginner) </span>
+                    <span class="list-sb-text"> Spring Boot </span>
                 </li>
                 <li>
-                    <span class="list-sb-text"> Spring Data(Beginner) </span>
+                    <span class="list-sb-text"> Spring Data </span>
                 </li>
                 <li>
-                    <span class="list-sb-text"> Spring MVC(Beginner) </span>
+                    <span class="list-sb-text"> Spring MVC </span>
                 </li>
                 <li>
-                    <span class="list-sb-text"> HTML(Basic knowledge) </span>
+                    <span class="list-sb-text"> HTML</span>
                 </li>
                 <li>
-                    <span class="list-sb-text"> CSS(Basic knowledge) </span>
+                    <span class="list-sb-text"> CSS</span>
+                </li>
+                <li>
+                    <span class="list-sb-text">  Scrum </span>
+                </li>
+                <li>
+                    <span class="list-sb-text">   Agile</span>
                 </li>
             </ul>
         </div>
@@ -79,26 +89,10 @@
 
             <ul class="list-sb">
                 <li>
-                    <span class="list-sb-text">  English A2-B1</span>
+                    <span class="list-sb-text">  English B1</span>
                 </li>
                 <li>
-                    <span class="list-sb-text">  German B1-B2</span>
-                </li>
-            </ul>
-        </div>
-        <!--Soft skills container-->
-        <div>
-            <h3  class="soft-skills" >Soft Skills</h3>
-
-            <ul class="list-sb">
-                <li>
-                    <span class="list-sb-text">  Scrum </span>
-                </li>
-                <li>
-                    <span class="list-sb-text">   Agile</span>
-                </li>
-                <li>
-                    <span class="list-sb-text">  Teamwork</span>
+                    <span class="list-sb-text">  German B1</span>
                 </li>
             </ul>
         </div>
