change proffesion name

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="main-container"> 
             <!-- about me main info-->
             <div>
-            <h2 class="profession">Junior Java Developer</h2>
+            <h2 class="profession">Java Developer</h2>
             <h1 class="name">Nikolay Klushyn</h1>
 
             <p class="text-about-me"> 
