--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <div>
                     <span class="contacts-link-type" >S:</span> <a class="contacts-link" href="skype:tikki1991">Skype: tikki1991</a> 
                 </div>
+               <div>
+                    <span class="contacts-link-type" >L:</span> <a class="contacts-link" href="www.linkedin.com/in/mykola-klushyn">LinkedIn</a>
+                </div><div>
+                    <span class="contacts-link-type" >G:</span> <a class="contacts-link" href="https://github.com/Prosperro-de">GitHub: Prosperro-de</a>
+                </div>
         </div> 
         <!--Location -->
         <div>
@@ -55,9 +60,6 @@
                     <span class="list-sb-text"> GIT </span>
                 </li>
                 <li>
-                    <span class="list-sb-text"> JDBC </span>
-                </li>  
-                <li>
                     <span class="list-sb-text">  Hibernate </span>
                 </li>
                 <li>
@@ -68,6 +70,9 @@
                 </li>
                 <li>
                     <span class="list-sb-text"> Spring MVC </span>
+                </li>
+                <li>
+                    <span class="list-sb-text"> Docker</span>
                 </li>
                 <li>
                     <span class="list-sb-text"> HTML</span>
@@ -117,9 +122,9 @@
                     <h3 class="projects">Projects</h3>
                     <ol class="jobs-links-all">
                         <li> 
-                        <a class="jobs-link" href="https://github.com/ponruslan/Project_1_InternetShop"> Team-project "Internet shop" </a>
-                            <span class="dots">................................ </span>
-                        <span>[  <span class="technology">Java Core</span>  ]</span> 
+                        <a class="jobs-link" href="https://github.com/ita-social-projects/Home/tree/master"> Open-source "Home" </a>
+                            <span class="dots">................................................... </span>
+                        <span>[  <span class="technology">Java 11, Spring Framework</span>  ]</span>
                         </li> 
                         <li>
                             <a class="jobs-link" href="https://javarush.ru/projects/apps/47575">Minesweeper game (Java Rush)</a>
@@ -132,11 +137,19 @@
                     <!-- my education-->
                     <div>
                         <h3 class="Work-Exp">Education</h3>
+                        <h4 class="work_place_1">SoftServe IT Academy</h4>
+
+                        <h5 class="education_profession">Intern</h5>
+                        <span class="work-place-time">
+                            September 2020 - now <span class="work-place-time-L"> | </span> Ukraine
+                        </span>
+                        <div class="education-description">Internship on open-source social project("Home")</div>
+
                         <h4 class="work_place_1">EPAM University program</h4>
                         
                         <h5 class="education_profession">Student</h5>
                         <span class="work-place-time">
-                            June 2020 - now <span class="work-place-time-L"> | </span> Ukraine 
+                            June 2020 - September 2020 <span class="work-place-time-L"> | </span> Ukraine
                         </span>
                         <div class="education-description">Strong learning Java Core</div>
 
@@ -144,7 +157,7 @@
                         
                         <h5 class="education_profession">Student</h5>
                         <span class="work-place-time">
-                            June 2020 - now <span class="work-place-time-L"> | </span> Ukraine 
+                            June 2020 - October 2020 <span class="work-place-time-L"> | </span> Ukraine
                         </span>
                         <div class="education-description">Learning Java Core, Hibernate, Spring Framework. Team-projects</div>
 
