add size changes

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>CV Nikolay Klushyn</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-     
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body >
     <!-- main container -->
     <div class="wrapper">  
         <aside class="sidebar">
-        <img class="img" src="./img/photo.JPG " alt="My photo">
+        <img class="img animate__backInLeft" src="./img/photo.JPG " alt="My photo">
 
                <!-- contacts container -->
            <div class="contacts"> 
@@ -110,7 +110,7 @@
             <h1 class="name">Nikolay Klushyn</h1>
 
             <p class="text-about-me"> 
-                I'm looking for a job in a company with intresting and creative people. 
+                I'm looking for a job in a company with intresting and creative people. <br>
                 I have a little experience, but I'm willing to learn new skills.
                 </p>
              </div> 
@@ -123,12 +123,12 @@
                     <ol class="jobs-links-all">
                         <li> 
                         <a class="jobs-link" href="https://github.com/ita-social-projects/Home/tree/master"> Open-source "Home" </a>
-                            <span class="dots">................................................... </span>
+                            <span class="dots">..................................................... </span>
                         <span>[  <span class="technology">Java 11, Spring Framework</span>  ]</span>
                         </li> 
                         <li>
                             <a class="jobs-link" href="https://javarush.ru/projects/apps/47575">Minesweeper game (Java Rush)</a>
-                            <span class="dots">.......................... </span>
+                            <span class="dots">............................ </span>
                             <span> [ <span class="technology"> Java Core </span>  ]</span> 
                         </li> 
                     </ol>
